--- a/public/css/song.css
+++ b/public/css/song.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #f5f5f5;
+    background-color: #4b4b4b;
     height: 100vh;
     width: 100vw;
 }
@@ -10,14 +10,15 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 .song-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     height: 100%;
-    animation: fade-in 15s linear 2s infinite alternate;
+    transition: transform 2.5s ease;
 }
 
 #album-image {
@@ -25,25 +26,11 @@ body {
     padding-right: 10px;
 }
 
-/*
-    create animation for song change
-*/
-@keyframes fade-in {
-    0% {
-        opacity: 0;
+@keyframes song-container-animation {
+    from {
+      transform: translateX(100%); /* Start the text outside the element on the right */
     }
-
-    5% {
-        transform: translateX(0px);
-        opacity: 1;
+    to {
+      transform: translateX(0); /* Slide the text back to its original position */
     }
-
-    99% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateX(-75%);
-        opacity: 0.1;
-    }
-}
+  }
