feat(README.md): readme configured and screenshot add, recommended width and height decided

--- a/public/css/song.css
+++ b/public/css/song.css
@@ -25,7 +25,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 500px;
+  width: 470px;
+  height: 170px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
