feat(public/js/song.js):  text insert

--- a/public/css/song.css
+++ b/public/css/song.css
@@ -35,6 +35,12 @@ body {
   padding: 10px;
 }
 
+.no-song-playing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .song-details {
   flex: 1;
   overflow: hidden;
