--- a/public/css/song.css
+++ b/public/css/song.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #4b4b4b;
+  background-color: transparent;
   height: 100vh;
   width: 100vw;
 }
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
+
 }
 
 .song-border {
@@ -30,9 +31,11 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border: 1px solid white;
+  border: 3px solid black;
   border-radius: 10px;
   padding: 10px;
+  background-color: #4b4b4b;
+
 }
 
 .no-song-playing {
